aligning problems fixed

--- a/style.css
+++ b/style.css
@@ -62,13 +62,23 @@ nav ul li{
 }
 
 footer{
-  height: 60px;
+ 
   padding-top: 20px;
   padding-left: 30px;
   background-color: #1f1430;
   border-top: 1px solid #eeeeee;
-  margin-top: 600px;
+  margin-top: 550px;
   color: #FFFFFF;
+  display: block;
+  text-align: center;
+
+
+}
+#rights{
+width: 400px;
+margin-left:auto;
+margin-right:auto;
+text-align: center;
 }
 
 header{
